# klublepszezycie

./: .env.test  .gitignore  CRON_SETUP.md  DASHBOARD_ANKIETERA.md  EMAIL_SCHEDULER_V3.md  EMAIL_SYSTEM_README.md  ERROR_CODES.md  EVENT_ARCHIVING.md  EVENT_SYSTEM_README.md  INSTALACJA_CELERY.md  INSTRUKCJE_POSTGRESQL.md  MIGRATION_FIX_INSTRUCTIONS.md  MIGRATION_README.md  NAPRAWA_SCHEDULERA.md  OPTYMALIZACJA_BAZY.md  OPTYMALIZACJA_SUMMARY.md  PAGINATE_BY_USAGE.md  README_MIGRATION.md  README_reset_email_system.md  add_archived_status.py  add_event_registration_template.py  add_target_column.py  app.py  archive_events.py  calendar_service.py  celery-beat.service  celery-worker.service  celery_app.py  celery_config.py  celerybeat-schedule-shm  celerybeat-schedule-wal  check_migrations.py  check_table_structure.py  cleanup_admin.sh  cleanup_logs.py  clear_email_queue.py  clear_queue.py  com.klublepszezycie.email.plist  config.py  cookies.txt  (+86 more)
app/: __init__.py
crm/: README.md  __init__.py  agent_api.py  config.py  crm_api.py  models.py
fixtures/: email_templates_complete.yaml
logs/: app_console.log.2025-09-25  app_console.log.2025-09-26  app_console.log.2025-09-27  wsgi.log.2025-09-25  wsgi.log.2025-09-27
migrations/: 20250929_110710_add_reminders_scheduled_to_event_schedule.py  README.md  add_order_column.sql  add_order_to_pages.py  init_automations.py  init_schedules.py  migrate_user_groups.py  migrate_user_system.py  remove_old_tables.py
scripts/: cleanup_group_memberships.py  init_stats.py  migrate_user_data.py
scriptts/: add_comment_fields.py  (+7 more)
(+424 files in other folders)
